<resources>
    <string name="phone_verification_first_title">To join The Square, please enter your email and mobile number.</string>
    <string name="phone_verification_second_title">(to give you the best experience on The Square)</string>
    <string name="phone_verification_third_title">By entering your phone number and email you agree with </string>
    <string name="phone_verification_third_title_bold">The Square Terms and Conditions</string>
    <string name="phone_verification_first_title_welcome_back">Welcome Back!</string>
    <string name="phone_verification_second_title_reconfirm">(Please reconfirm your mobile number) </string>
    <string name="phone_verification_button_text">Confirm</string>
    <string name="phone_verification_country_code_hint">+44</string>
    <string name="phone_verification_phone_text">Phone Number</string>
    <string name="phone_verification_email_text">Email</string>
    <string name="phone_verification_thanks">Thanks!</string>
    <string name="phone_verification_code_sent">We\'re just verifying your number. If this doesn\'t happen within 10 seconds, please enter the code we\'ve just text to %1$s and we\'ll get you started.</string>
    <string name="phone_verification_did_not_receive_sms">Didn\'t receive SMS?\nResend code.
    </string>
    <string name="phone_verification_number_not_right">Number not right?\nEdit number.</string>
    <string name="phone_verification_error_message">Hmmm. Your number doesn\'t look right. Make sure
        you\'ve entered the correct country code and number </string>
    <string name="phone_verification_continue">Continue</string>
    <string name="phone_verification_validate_failed">Please enter a 4 digit code.</string>
    <string name="sign_up_worker_step_personal_information_post_code_hint">Home postcode*</string>
    <string name="sign_up_worker_step_personal_information_email_hint">Email address</string>
    <string name="sign_up_worker_step_personal_information_last_name_hint">Last Name*</string>
    <string name="sign_up_worker_step_personal_information_first_name_hint">First Name*</string>
    <string name="sign_up_worker_step_personal_information_password_mandatory_hint">Create a Password*</string>
    <string name="sign_up_worker_step_personal_information_confirmation_password_mandatory_hint">Re-enter a password*</string>
    <string name="sign_up_worker_step_personal_information_password_not_mandatory_hint">Create a Password</string>
    <string name="sign_up_worker_step_personal_information_confirmation_password_not_mandatory_hint">Re-enter a password</string>
    <string name="sign_up_worker_step_personal_information_title">OK! We just need\na few details from
        you&#8230;</string>
    <string name="sign_up_worker_step_personal_information_title_2">Please enter your details below...</string>
    <string name="sign_up_worker_step_roles_title_before_name">OK</string>
    <string name="sign_up_worker_step_roles_title_after_name">, which one job\nbest describes what you do?</string>
    <string name="up_to_three">(Select up to 3)</string>
    <string name="sign_up_worker_step_experience_title">More about you...</string>
    <string name="sign_up_worker_step_experience_years_title">Experience in Years</string>
    <string name="sign_up_worker_step_experience_qualifications">Your Qualifications</string>
    <string name="sign_up_worker_step_experience_how_good_english">How good is your English</string>
    <string name="sign_up_worker_step_4_title">Please complete your\nCSCS details.</string>
    <string name="sign_up_worker_step_skills_title">Please select any specific skills you have</string>
    <string name="sign_up_worker_step_experience_type_title">What specific experience do you have?</string>
    <string name="sign_up_worker_step_trades_title_1">What trades is your %s role associated to?</string>
    <string name="sign_up_worker_step_trades_title_2">What trades are your %s roles associated to?</string>
    <string name="sign_up_worker_step_qualifications_title">Do you have any qualifications?</string>
    <string name="sign_up_worker_step_location_title">Work location preferences.</string>
    <string name="sign_up_worker_step_location_commute_question">How long are you happy to commute for?</string>
    <string name="sign_up_worker_step_rate_title">Availability \&amp; Rate</string>
    <string name="sign_up_worker_step_rate_day_rate">Your preferred day rate</string>
    <string name="sign_up_worker_step_rate_availability_to_work">What\'s your availability to work?
    </string>
    <string name="immediatly">Immediately</string>
    <string name="sign_up_worker_step_rate_immediatly_hint">(I can start tomorrow)</string>
    <string name="just_looking">I\'m Just Looking</string>
    <string name="sign_up_worker_step_rate_just_looking_hint">(from next week onwards)</string>
    <string name="sign_up_worker_step_company_title">Add any notable companies you\'ve worked for
    </string>
    <string name="sign_up_employer_step_1_title">OK! We just need a few details\n about you and your
        company
    </string>
    <string name="sign_up_employer_step_1_title_2">All details are for The Square use only</string>
    <string name="sign_up_employer_step_1_first_name_hint">First Name*</string>
    <string name="sign_up_employer_step_1_last_name_hint">Last Name*</string>
    <string name="sign_up_employer_step_1_job_title_hint">Your Job Title*</string>
    <string name="sign_up_employer_step_1_work_email_hint">Your work email address*</string>
    <string name="sign_up_employer_step_1_password_hint">Create password*</string>
    <string name="sign_up_employer_step_1_password2_hint">Re-enter password*</string>
    <string name="sign_up_employer_step_1_password_not_mandatory_hint">Create a password</string>
    <string name="sign_up_employer_step_1_password2_not_mandatory_hint">Re-enter password</string>
    <string name="sign_up_employer_step_1_company_name_hint">Company registration number</string>
    <string name="sign_up_employer_step_1_upload_image_title">Upload your company image logo from
    </string>
    <string name="sign_up_employer_step_1_upload_image_title_2">(optional)</string>
    <string name="sign_up_employer_step_1_upload_image_title_3">Logo should be png transparent less
        than 1 MB
    </string>
    <string name="sign_up_employer_step_1_upload_image_btn_gallery">GALLERY</string>
    <string name="sign_up_employer_step_1_upload_image_btn_dropbox">DROPBOX</string>
    <string name="sign_up_employer_step_1_upload_image_btn_drive">DRIVE</string>
    <string name="sign_up_employer_step_1_btn_next">CONTINUE</string>
    <string name="sign_up_employer_step_1_validation_first_name">Please enter your first name</string>
    <string name="sign_up_employer_step_1_validation_last_name">Please enter your last name</string>
    <string name="sign_up_employer_step_1_validation_job_title">Please enter the job title</string>
    <string name="sign_up_employer_step_1_validation_email_address">Please enter your email address</string>
    <string name="sign_up_employer_step_1_validation_password">Please enter a password</string>
    <string name="sign_up_employer_step_1_validation_password_confirmation">Please re-enter a password</string>
    <string name="sign_up_employer_step_1_validation_password_match">The password and confirmation password do not match</string>
    <string name="validate_first">Please enter your first name</string>
    <string name="validate_last">Please enter your last name</string>
    <string name="empty_email">Please enter your email address</string>
    <string name="validate_password">Please enter a password</string>
    <string name="validate_password_reenter">Please re-enter a password</string>
    <string name="validate_password_match">The password and confirmation password do not match</string>
    <string name="validate_zip">Please enter a valid postal code</string>
    <string name="validate_email">Please enter a valid email address</string>
    <string name="sign_up_employer_step_company_title">Company information</string>
    <string name="sign_up_employer_step_company_name_hint">Company name*</string>
    <string name="sign_up_employer_step_company_add_address_label">Add registered company address
    </string>
    <string name="sign_up_employer_step_company_add_address_hint">Search by address or postcode*
    </string>
    <string name="sign_up_employer_step_company_upload_logo_label">Upload your company logo*
    </string>
    <string name="sign_up_employer_step_company_btn_search_address">SEARCH</string>
    <string name="sign_up_employer_step_company_btn_skip">Complete later</string>
    <string name="sign_up_employer_step_company_btn_next">CONTINUE</string>
    <string name="sign_up_employer_step_2_title">You\'are almost done\!</string>
    <string name="sign_up_employer_step_2_title_2">Key finance contact information</string>
    <string name="sign_up_employer_step_2_title_3">The person that receives and pay invoices
    </string>
    <string name="sign_up_employer_step_2_contact_first_name_hint">Contact first name*</string>
    <string name="sign_up_employer_step_2_contact_last_name_hint">Contact last name*</string>
    <string name="sign_up_employer_step_2_contact_telephone_hint">Contact telephone*</string>
    <string name="sign_up_employer_step_2_contact_email_hint">Contact e-mail*</string>
    <string name="sign_up_employer_step_2_registered_address_hint">Company registered address
    </string>
    <string name="sign_up_employer_step_2_registration_number_hint">Company registration number
    </string>
    <string name="sign_up_employer_step_1_company_registration_number_help">We will need this before you can get matched to workers.</string>
    <string name="menu_employer_my_jobs_home">My Jobs</string>
    <string name="menu_employer_my_graftrs">My Workers</string>
    <string name="menu_employer_my_account">My Account</string>
    <string name="menu_employer_help">Help</string>
    <string name="menu_employer_log_out">Log out</string>
    <string name="menu_employer_edit_profile">Edit Profile</string>
    <string name="menu_worker_my_jobs_matches_home">Job Matches</string>
    <string name="menu_worker_my_jobs">My Jobs</string>
    <string name="menu_worker_my_account">My Account</string>
    <string name="menu_worker_help">Help</string>
    <string name="menu_worker_share">Share The Square</string>
    <string name="menu_worker_log_out">Log out</string>
    <string name="menu_coming_soon_my_profile">My Profile</string>
    <string name="menu_coming_soon_how_it_works">How it Works</string>
    <string name="menu_coming_soon_log_out">Log out</string>
    <string name="next">NEXT</string>
    <string name="my_account_worker_title">My Account</string>
    <string name="didnt_work">Didn\'t work</string>
    <string name="hours_worked">Hours worked</string>
    <string name="overtime">Overtime</string>
    <string name="employer_account_price_plan">My Price Plan</string>
    <string name="onboarding_intro">OK! We just need \na few details from you...</string>
    <string name="onboarding_availability">Availability</string>
    <string name="onboarding_proceed">Show me jobs</string>
    <string name="employer_payments">Subscription plan management</string>
    <string name="employer_payments_name">Cardholder name</string>
    <string name="employer_payments_name_hint">John Smith</string>
    <string name="employer_payments_number">Card number</string>
    <string name="employer_payments_number_hint">01234567891234567</string>
    <string name="employer_payments_expiration">Card expiration</string>
    <string name="employer_payments_month">Month</string>
    <string name="employer_payments_year">Year</string>
    <string name="employer_payments_add_go">Add</string>
    <string name="employer_payments_cvc">Card CVC</string>
    <string name="employer_payments_cvc_hint">480</string>
</resources>