<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/top"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <construction.thesquare.shared.view.widget.JosefinSansTextView
            android:textSize="26sp"
            app:josefin_style="light"
            android:textAlignment="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:textColor="@color/blackSquareColor"
            android:text="@string/onboarding_availability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_margin="12dp"
        android:layout_below="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"
        android:elevation="2dp"
        android:background="#F0F0F0">

        <construction.thesquare.shared.view.widget.JosefinSansTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#333333"
            style="@style/body_dark_text"
            android:padding="10dp"
            android:text="@string/sign_up_worker_step_rate_availability_to_work"
            android:id="@+id/tvWorkerSixthStepAvailabilityLabel" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/immediatly"
            android:textSize="12dp"
            android:paddingTop="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:id="@+id/check_available" />

        <construction.thesquare.shared.view.widget.JosefinSansTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/graySquareColor"
            style="@style/caption_gray_text"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:text="@string/sign_up_worker_step_rate_immediatly_hint"
            android:id="@+id/tvWorkerSixthStepStartTomorrowLabel"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#AAAAAA"
            android:layout_marginBottom="10dp"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/just_looking"
            android:textSize="12dp"
            android:paddingTop="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:id="@+id/check_looking" />

        <construction.thesquare.shared.view.widget.JosefinSansTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/graySquareColor"
            style="@style/caption_gray_text"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:text="@string/sign_up_worker_step_rate_just_looking_hint"
            android:id="@+id/tvWorkerSixthStepffUpToNextWeek"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#AAAAAA"/>
    </LinearLayout>

    <construction.thesquare.shared.view.widget.JosefinSansTextView
        android:background="@color/redSquareColor"
        android:layout_alignParentBottom="true"
        android:text="@string/onboarding_proceed"
        android:textAlignment="center"
        android:textSize="16sp"
        android:padding="18dp"
        android:textAllCaps="true"
        android:id="@+id/next"
        android:textColor="@android:color/white"
        app:josefin_style="semiBold"
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>