<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="14"
    android:padding="@dimen/small_padding">

    <View
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>

    <View
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <construction.thesquare.shared.view.widget.JosefinSansTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center"
        style="@style/caption_gray_text"
        android:text="@string/didnt_work"/>

    <construction.thesquare.shared.view.widget.JosefinSansTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        style="@style/caption_gray_text"
        android:gravity="center"
        android:text="@string/hours_worked"/>

    <construction.thesquare.shared.view.widget.JosefinSansTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:paddingTop="@dimen/small_padding"
        android:paddingBottom="@dimen/small_padding"
        style="@style/caption_gray_text"
        android:gravity="center"
        android:text="@string/overtime"/>
</LinearLayout>